# autoclicker

./: CMakeLists.txt  README.md  build.sh  main.cpp
src/: AutoClicker.cpp  AutoClicker.h  main.cpp
